default/rocketmq/overlays/test/mq-console-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: rocketmq-dashboard
  labels:
    app: rocketmq-dashboard
    app.kubernetes.io/instance: rocketmq
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 18081
  selector:
    app: rocketmq-dashboard
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: rocketmq
spec:
  ports:
  - port: 9876
    protocol: TCP
    targetPort: 9876
  selector:
    app: mqnamesrv
