default/rocketmq/overlays/test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mqnamesrv-headless
  labels:
    app: mqnamesrv-headless
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 9876
      name: server
      targetPort: 9876
  selector:
    app: mqnamesrv
